# vibe-commander

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  eslint.config.ts  justfile  mise.toml  oxfmt.json  oxlint.json  package.json  spec.md  tsconfig.json  tsconfig.node.json  typos.toml  vite.config.ts  vitest.config.ts
.config/: nextest.toml
crates/vibe-commander-core/: Cargo.toml
crates/vibe-commander-core/src/: error.rs  lib.rs  listing.rs  types.rs
crates/vibe-commander-core/tests/: listing_property_test.rs  listing_test.rs
crates/vibe-commander-core/tests/common/: mod.rs
crates/vibe-commander-gpui/: Cargo.toml  justfile
crates/vibe-commander-gpui/src/: main.rs
crates/vibe-commander-tauri/: Cargo.toml  bacon.toml  tauri.conf.json
crates/vibe-commander-tauri/.cargo/: config.toml
crates/vibe-commander-tauri/src/: lib.rs  main.rs
crates/vibe-commander-tauri/src/features/listing/: commands.rs
crates/vibe-commander-tauri/src/shared/: mod.rs
e2e/: tsconfig.json  wdio.conf.ts
e2e/fixtures/: index.ts
e2e/specs/: listing.e2e.ts  navigation.e2e.ts
scripts/: check-commit-msg.sh
src/: App.css  App.test.tsx  App.tsx  app.browser.spec.tsx  app.css  app.tsx  index.tsx
src-tauri/: Cargo.toml  clippy.toml  deny.toml  justfile  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/features/listing/: commands.rs
src-tauri/src/shared/: error.rs  mod.rs  types.rs
src-tauri/tests/: fixtures_test.rs  listing_property_test.rs  listing_test.rs
src-tauri/tests/common/: mod.rs
src/bindings/: tauri.ts
src/core/: ipc.ts  theme.spec.ts  theme.ts
src/features/pane/: directory-service.ts  file-list.browser.spec.tsx  file-list.spec.ts  file-list.tsx  format-error.spec.ts  format-error.ts  index.ts  keyboard.browser.spec.tsx  keyboard.ts  pane.tsx  store.property.spec.ts  store.spec.ts  store.ts
src/features/path-bar/: path-bar.browser.spec.tsx  path-bar.tsx
src/lib/: logger.ts
src/styles/: base.css  main.css  tokens.css
src/testing/: matchers.ts  mock-ipc-factory.ts  test-utils.ts
tauri-bindings/: index.ts
vitest-browser-solid/: index.ts  pure.ts
