[package]
name = "vibe-commander"
version = "0.1.0"
description = "A simple and effective file commander"
authors = ["you"]
edition = "2024"
rust-version = "1.92.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibe_commander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }

tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.24.0"
proptest = "1.9.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
redundant_clone = "deny"
disallowed_methods = "deny"
panic = "warn"
str_to_string = "warn"
clone_on_ref_ptr = "warn"
too_many_arguments = "allow"
type_complexity = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "debuginfo"

[profile.release-perf]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
