[package]
name = "vibe-commander-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
dirs = "6"
specta = { version = "=2.0.0-rc.22", optional = true, features = ["derive"] }

[features]
default = []
specta = ["dep:specta"]

[dev-dependencies]
tempfile = "3.24.0"
proptest = "1.9.0"

[lints]
workspace = true
